uubloomington/uubloomington/static/css/uubloomington.css
/* ... */
.block-page_feature.order-of-service > img {
    margin-top: 0.6rem;
    margin-bottom: auto;
}
/*End order of service*/

/*Hack to kinda fix styling on list page body, this will be unnecessary when all pages are block pages someday*/
article.list-page > p {
    margin-bottom: 0;
}

/*Search styling*/
article.search-page > form {
    display: flex;
    text-align: center;
    margin-bottom: 2rem;
    justify-content: center;
    gap: 1rem;
}

article.search-page > form > label {
    padding: 1rem 1.5rem 0.85rem;
    border: var(--standard-border-thickness) solid var(--accent-color);
    border-radius: var(--standard-radius);
    display: inline-block;
}

article.search-page > form > label > input {
    border: none;
    border-bottom: var(--standard-border-thickness) solid var(--accent-color);
    font-size: 1.2rem;
}

article.search-page .card-action {
    margin: 0;
}

article.search-page .page-buttons {
    text-align: center;
}
/*End search styling*/

